--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,13 @@
 }
 
 /* Leaflet style */
+
 .leaflet-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 0;
 }
 
