--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/**
+ * Css file used for styling components outside <App/>
+ */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
