Rebranding, add footer, multiple page improvement and fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,9 @@ body {
     left: 0;
     right: 0;
 }
+
+#logo {
+    color: black;
+    font-family: 'Grand Hotel', cursive;
+    font-size: 2.5rem;
+}
